--- a/Act5_PUPMap/positions.css
+++ b/Act5_PUPMap/positions.css
@@ -14,7 +14,7 @@
 .info-panel {
     position: fixed;
     display: none;
-    top: 50%; 
+    /* top: 50%;  */
     transform: translateY(-50%);
     width: 650px;
     height: 940px;
@@ -23,6 +23,18 @@
     border-color: rgba(189, 13, 13, 0.755);
     border-radius: 20px;
     backdrop-filter: blur(12px);
+    overflow-y: auto;
+
+    transform: translateY(100%);
+    opacity: 0;
+    animation: slideDown 0.1s ease forwards;
+}
+
+@keyframes slideDown {
+    to {
+        transform: translateY(0);
+        opacity: 1;
+    }
 }
 
 #infoRightPanel {
@@ -37,7 +49,7 @@
 
 #mainBldg, #oval, #lagoon,
 #chapel, #lib, #ousBldg, 
-#cdr, #linear, #obelisk, 
+#cdr, #linear, #obelisk, #shrine, 
 
 #pylon, #mural, #visitors,
 #gym, #alumni, #pool,
@@ -45,7 +57,7 @@
 
 #coc, #cea, #itech,
 #BPoffice, #hasmin {
-    border: 3px solid rgb(255, 0, 0);
+    border: 3px solid rgb(207, 222, 0);
     border-radius: 20px;
     /* border: transparent; */
 }
@@ -59,6 +71,7 @@
 #cdr:hover, 
 #linear:hover, 
 #obelisk:hover, 
+#shrine:hover,
 
 #pylon:hover, 
 #mural:hover, 
@@ -74,8 +87,8 @@
 #cea:hover, 
 #itech:hover,
 #BPoffice:hover, 
-#hasminBldg:hover {
-    border: 2px solid rgb(255, 251, 0); 
+#hasmin:hover {
+    border: 4px solid rgb(179, 0, 0); 
     border-radius: 20px;
 }
 
@@ -85,8 +98,8 @@
 /* Main building */
 #mainBldg {
     position: fixed;
-    top: 34%;   /* adjust coordinates here */
-    left: 14%;  /* adjust coordinates here */
+    top: 34%;   
+    left: 14%;  
     width: 300px;
     height: 120px;
     background: transparent;
@@ -96,8 +109,8 @@
 /* oval */
 #oval {
     position: fixed;
-    top: 62%;   /* adjust coordinates here */
-    left: 23%;  /* adjust coordinates here */
+    top: 62%;   
+    left: 23%;  
     width: 570px;
     height: 190px;
     background: transparent;
@@ -107,8 +120,8 @@
 /* lagoon */
 #lagoon {
     position: fixed;
-    top: 39%;   /* adjust coordinates here */
-    left: 34%;  /* adjust coordinates here */
+    top: 39%;   
+    left: 34%;  
     width: 250px;
     height: 90px;
     background: transparent;
@@ -118,8 +131,8 @@
 /* chapel */
 #chapel {
     position: fixed;
-    top: 48%;   /* adjust coordinates here */
-    left: 14%;  /* adjust coordinates here */
+    top: 48%;   
+    left: 14%;  
     width: 250px;
     height: 130px;
     background: transparent;
@@ -129,8 +142,8 @@
 /* library */
 #lib {
     position: fixed;
-    top: 29%;   /* adjust coordinates here */
-    left: 42%;  /* adjust coordinates here */
+    top: 29%;   
+    left: 42%;  
     width: 250px;
     height: 90px;
     background: transparent;
@@ -140,8 +153,8 @@
 /* OUS bldg */
 #ousBldg {
     position: fixed;
-    top: 22%;   /* adjust coordinates here */
-    left: 40%;  /* adjust coordinates here */
+    top: 22%;   
+    left: 40%;  
     width: 150px;
     height: 65px;
     background: transparent;
@@ -151,8 +164,8 @@
 /* charlie del rosario bldg */
 #cdr {
     position: fixed;
-    top: 30%;   /* adjust coordinates here */
-    left: 33%;  /* adjust coordinates here */
+    top: 30%;   
+    left: 33%;  
     width: 95px;
     height: 70px;
     background: transparent;
@@ -162,8 +175,8 @@
 /* linear */
 #linear {
     position: fixed;
-    top: 24%;   /* adjust coordinates here */
-    left: 35%;  /* adjust coordinates here */
+    top: 24%;   
+    left: 35%;  
     width: 94px;
     height: 60px;
     background: transparent;
@@ -173,10 +186,21 @@
 /* obelisk */
 #obelisk {
     position: fixed;
-    top: 40%;   /* adjust coordinates here */
-    left: 47%;  /* adjust coordinates here */
+    top: 40%;   
+    left: 47%;  
     width: 95px;
     height: 90px;
+    background: transparent;
+    cursor: pointer;
+}
+
+/* shrine */
+#shrine {
+    position: fixed;
+    top: 51%;   
+    left: 41%;  
+    width: 224px;
+    height: 74px;
     background: transparent;
     cursor: pointer;
 }
@@ -189,8 +213,8 @@
 /* Pylon */
 #pylon {
     position: fixed;
-    top: 66%;   /* adjust coordinates here */
-    right: 25%;  /* adjust coordinates here */
+    top: 66%;   
+    right: 25%;  
     width: 90px;
     height: 75px;
     background: transparent;
@@ -200,20 +224,9 @@
 /* Mural */
 #mural {
     position: fixed;
-    top: 70%;   /* adjust coordinates here */
-    right: 30%;  /* adjust coordinates here */
+    top: 70%;   
+    right: 30%;  
     width: 70px;
-    height: 75px;
-    background: transparent;
-    cursor: pointer;
-}
-
-/* Visitor */
-#visitors {
-    position: fixed;
-    top: 62%;   /* adjust coordinates here */
-    right: 29%;  /* adjust coordinates here */
-    width: 73px;
     height: 75px;
     background: transparent;
     cursor: pointer;
@@ -222,8 +235,8 @@
 /* gym */
 #gym {
     position: fixed;
-    top: 43%;   /* adjust coordinates here */
-    right: 20%;  /* adjust coordinates here */
+    top: 43%;   
+    right: 20%;  
     width: 240px;
     height: 150px;
     background: transparent;
@@ -234,8 +247,8 @@
 /* parking and tennis court */
 #court {
     position: fixed;
-    top: 49%;   /* adjust coordinates here */
-    right: 30%;  /* adjust coordinates here */
+    top: 49%;   
+    right: 30%;  
     width: 280px;
     height: 69px;
     background: transparent;
@@ -246,8 +259,8 @@
 /* Kinetic and Alumni Building */
 #alumni {
     position: fixed;
-    top: 36%;   /* adjust coordinates here */
-    right: 37%;  /* adjust coordinates here */
+    top: 36%;   
+    right: 37%;  
     width: 210px;
     height: 76px;
     background: transparent;
@@ -257,8 +270,8 @@
 /* Pool */
 #pool {
     position: fixed;
-    top: 41%;   /* adjust coordinates here */
-    right: 33%;  /* adjust coordinates here */
+    top: 41%;   
+    right: 33%;  
     width: 98px;
     height: 76px;
     background: transparent;
@@ -268,8 +281,8 @@
 /* Engineering and Science Research Center */
 #research {
     position: fixed;
-    top: 55%;   /* adjust coordinates here */
-    right: 12%;  /* adjust coordinates here */
+    top: 55%;   
+    right: 12%;  
     width: 210px;
     height: 80px;
     background: transparent;
@@ -279,8 +292,8 @@
 /* Catwalk */
 #catWalk {
     position: fixed;
-    top: 59%;   /* adjust coordinates here */
-    right: 31%;  /* adjust coordinates here */
+    top: 59%;   
+    right: 31%;  
     width: 340px;
     height: 70px;
     background: transparent;
@@ -294,8 +307,8 @@
 /* coc */
 #coc {
     position: fixed;
-    top: 14%;   /* adjust coordinates here */
-    right: 27%;  /* adjust coordinates here */
+    top: 14%;   
+    right: 27%;  
     width: 110px;
     height: 90px;
     background: transparent;
@@ -304,8 +317,8 @@
 
 #cea {
     position: fixed;
-    top: 8%;   /* adjust coordinates here */
-    right: 21%;  /* adjust coordinates here */
+    top: 8%;   
+    right: 21%;  
     width: 150px;
     height: 90px;
     background: transparent;
@@ -314,8 +327,8 @@
 
 #itech {
     position: fixed;
-    top: 5%;   /* adjust coordinates here */
-    right: 15%;  /* adjust coordinates here */
+    top: 5%;   
+    right: 15%;  
     width: 130px;
     height: 70px;
     background: transparent;
@@ -324,8 +337,8 @@
 
 #BPoffice {
     position: fixed;
-    top: 11%;   /* adjust coordinates here */
-    right: 15%;  /* adjust coordinates here */
+    top: 11%;   
+    right: 15%;  
     width: 130px;
     height: 70px;
     background: transparent;
@@ -334,8 +347,8 @@
 
 #hasmin {
     position: fixed;
-    top: 1%;   /* adjust coordinates here */
-    right: 5%;  /* adjust coordinates here */
+    top: 1%;   
+    right: 5%;  
     width: 165px;
     height: 70px;
     background: transparent;
