--- a/Act5_PUPMap/positions.css
+++ b/Act5_PUPMap/positions.css
@@ -57,9 +57,9 @@
 
 #coc, #cea, #itech,
 #BPoffice, #hasmin {
-    border: 3px solid rgb(207, 222, 0);
+    /* border: 3px solid rgb(207, 222, 0); */
     border-radius: 20px;
-    /* border: transparent; */
+    border: transparent;
 }
 
 #mainBldg:hover, 
