--- a/Act5_PUPMap/design.css
+++ b/Act5_PUPMap/design.css
@@ -102,14 +102,23 @@ body, html {
     align-items: center;
 }
 
+#map-image {
+    width: 100%;
+    height: 100%;
+    object-fit: fill;
+}
+
 #PUPmap {
     background-position: no-repeat center center/cover;
+    width: 100%;
+    height: 100%;
+    display: block;
 }
 
 .map-image {
     width: 100%;
     height: 100%;
-    object-fit: fit; 
+    object-fit: fill; 
     object-position: center;
 }
 
